k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vm-vscode
spec:
    replicas: 5
    selector:
        matchLabels:
            app: vscode
    template:
        metadata:
            labels:
                app: vscode
        spec:
            containers:
                - name: vscode
                  image: my-vscode-image
                  imagePullPolicy: Never
                  args:
                      - "--user=$USER"
                      - "--uid=$UID"
                      - "--gid=$GID"
                      - "--log.level=DEBUG"
                  ports:
                      - containerPort: 8443
                  securityContext:
                      runAsUser: 1000
                      runAsGroup: 1000
                  volumeMounts:
                      - name: vscode-workspace
                        mountPath: /home/coder/workspace
                      - name: vscode-config
                        mountPath: /home/coder/.config
                      - name: vscode-certs
                        mountPath: /home/coder/.certs
            volumes:
                - name: vscode-workspace
                  persistentVolumeClaim:
                      claimName: vscode-workspace-pvc
                - name: vscode-config
                  persistentVolumeClaim:
                      claimName: vscode-config-pvc
                - name: vscode-certs
                  persistentVolumeClaim:
                      claimName: vscode-certs-pvc
