k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: vscode-service
    namespace: default
spec:
    selector:
        app: vscode
    ports:
        - port: 8443
          targetPort: 8443
          protocol: TCP
          nodePort: 30443
    type: NodePort
