k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vscode-ingress
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
    rules:
        - host: vscode.localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: vscode-service
                            port:
                                number: 8443
    tls:
        - hosts:
              - vscode.localhost
          secretName: vscode-tls-secret
